# spakky-core

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  pyproject.toml
.github/workflows/: coverage.yml  on-pull-request-to-develop.yml  on-push-to-develop.yml  on-push-to-main.yml  publish.yml  test-automation.yml  test.yml
sample/: app.py
sample/adapters/: event_publisher.py  unit_of_work.py
sample/aspects/: logging.py  transaction.py
sample/common/: config.py
sample/common/adapters/: event_publisher.py  unit_of_work.py
sample/common/aspects/: logging.py  transaction.py
sample/user/repository/: user.py
sample/users/model/: user.py
scripts/: add_git_tag.py
spakky/: constants.py
spakky/aop/: advice.py  advisor.py  aspect.py  aspect_post_processor.py  error.py  order.py  pointcut.py  post_processor.py
spakky/aop/builtin/: logging.py  transactional.py
spakky/aop/interfaces/: aspect.py
spakky/application/: application.py  application_context.py  error.py  inject.py
spakky/application/interfaces/: application_context.py  bean_processor.py  bean_processor_registry.py  container.py  pluggable.py  plugin.py  plugin_registry.py  post_processor.py  processor.py  registry.py
spakky/architecture/: error.py
spakky/architecture/model/: aggregate_root.py  decorator.py  domain_event.py  entity.py  value_object.py
spakky/aspects/: logging.py  transactional.py
spakky/bean/: application_context.py  autowired.py  bean.py  error.py  inject.py  primary.py  provider.py
spakky/bean/interfaces/: bean_container.py  bean_processor.py  bean_processor_registry.py  bean_registry.py  bean_scanner.py  post_processor.py  post_processor_registry.py
spakky/component/: autowired.py  component.py  container.py  provider.py
spakky/core/: annotation.py  aspect.py  cloneable.py  constants.py  equatable.py  error.py  generics.py  importing.py  metadata.py  mro.py  mutability.py  proxy.py  types.py
spakky/core/interfaces/: cloneable.py  comparable.py  disposable.py  equatable.py  representable.py
spakky/cryptography/: aes.py  b64.py  cryptor.py  error.py  gcm.py  hash.py  hmac.py  jwt.py  key.py  password.py
spakky/cryptography/cryptor/: aes.py  gcm.py  interface.py  rsa.py
spakky/dependency/: application_context.py  autowired.py  component.py  container.py  context.py  dependency.py  error.py  inject.py  plugin.py  primary.py  provider.py
spakky/dependency/interfaces/: dependency_container.py  dependency_post_processor.py  managed_container.py  managed_dependency_registry.py  managed_dependency_scanner.py  managed_registry.py  scanner.py  unmanaged_dependency_registry.py  unmanaged_registry.py
spakky/disposable/: __init__.py
spakky/domain/: error.py
spakky/domain/interfaces/: event_publisher.py  repository.py  transaction.py  unit_of_work.py
spakky/domain/models/: aggregate_root.py  domain_event.py  entity.py  event.py  value_object.py
spakky/domain/persistence/: repository.py
spakky/domain/ports/: error.py  event_publisher.py  proxy.py  unit_of_work.py
spakky/domain/queries/: criteria.py  query.py
spakky/domain/services/: command.py  generic.py  query.py
spakky/domain/usecase/: generic.py
spakky/domain/usecases/: command.py  query.py
spakky/extensions/: logging.py  transactional.py
spakky/framework/: __init__.py  application.py  daemon_task.py
spakky/framework/context/: application_context.py  autowired.py  component_scan.py
spakky/framework/core/: annotation.py  aspect.py  casing.py  generic.py  importing.py
spakky/framework/web/: __init__.py  decorators.py
spakky/injectable/: error.py  injectable.py
spakky/plugin/fastapi/: error.py  post_processor.py  routing.py
spakky/plugins/: aspect.py  logging.py  transaction.py
spakky/pod/: error.py  inject.py  lazy.py  order.py  pod.py  qualifier.py
spakky/pod/annotations/: order.py  pod.py  qualifier.py
spakky/pod/interfaces/: application_context.py  container.py  post_processor.py
spakky/pod/post_processors/: aware_post_processor.py
spakky/security/: encoding.py  error.py  hash.py  hmac.py  jwt.py  key.py
spakky/security/cryptography/: aes.py  gcm.py  (+2 more)
spakky/service/: background.py  post_processor.py
spakky/stereotype/: configuration.py  controller.py  event_handler.py  repository.py  usecase.py
spakky/stereotypes/: component.py  configuration.py  controller.py  environment.py  repository.py  service.py  usecase.py
spakky/task/: async_task.py  cancellation_token.py  error.py  interface.py  sync_task.py
spakky/threading/: error.py  interface.py  managed_thread.py
spakky/utils/: casing.py  generic.py  inspection.py
tests/aop/: conftest.py  test_aop.py  test_aspect_post_processor.py  test_order.py  test_post_processor.py
tests/application/: conftest.py  test_application.py  test_application_context.py  test_inject.py
tests/aspects/: test_logging.py  test_transactional.py
tests/bean/: test_application_context.py  test_bean.py  test_inject.py
tests/core/: test_annotated.py  test_annotation.py  test_importing.py  test_mro.py  test_mutability.py  test_proxy.py  test_types.py
tests/cryptography/: test_base64_encoder.py  test_cryptography.py  test_hash.py  test_jwt.py  test_password.py
tests/dummy_package/: module_a.py  module_b.py  module_c.py
tests/extensions/: test_logging.py  test_transactional.py
tests/framework/: test_application.py
tests/injectable/: test_injectable.py
tests/plugins/: conftest.py  test_aspect.py  test_logging.py  test_transaction.py
tests/pod/: test_application_context.py  test_inject.py  test_pod.py
tests/second_dummy_package/: module_a.py  second_module_b.py  second_module_c.py
tests/security/: test_encoding.py  test_hash.py  test_hmac.py  test_jwt.py  test_key.py
tests/service/: test_background_service.py
tests/stereotype/: test_configuration.py  test_controller.py  test_event_handler.py  test_repository.py  test_service.py  test_usecase.py
tests/threading/: test_managed_thread.py
tests/utils/: test_inspection.py
(+163 files in other folders)
